Fixe fruits placeholder too narrow on small screens. Solves #36

--- a/src/sass/partials/_fruit-styles.scss
+++ b/src/sass/partials/_fruit-styles.scss
@@ -18,6 +18,7 @@
   }
 
   h2 {
+    padding: 0 10px;
     font-size: 3.3em;
   }
 
